--- a/games.html
+++ b/games.html
@@ -72,6 +72,7 @@ li{
 <center><h1 style="font-family:arial;font-size:20px;color:white">Games</h1></center>
 
 
+
 <br>
 
 <center>
@@ -85,6 +86,24 @@ li{
   </div>
 </center>
 </a>
+</center>
+
+<br>
+
+<center><div style="width:60%;max-width:600px;padding:10px;background-color:#444444;border-radius:5px;box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
+    <div class="col-md-4 col-sm-12">
+      <div style="margin:20px;" class="card">
+        <center><div class="card-body">
+          <img src="https://i.ytimg.com/vi/cwTG4kWACcU/maxresdefault.jpg" style="box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);width:100%;border-radius:5px;"></img>
+          <br>
+          <h1 style="font-size:20px;font-family:arial; color:white;">Rivals Of Aether</h1><br>
+        <a style="text-decoration:none;font-size:15px;font-family:arial;color:white;padding:8px;border-radius:4px;box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);"
+         href="http://royalurls.com/pU53SHjQ">Download</a>
+        </div>
+      </div>
+    </div>
+  </div>
+</center>
 </center>
 
 <br>
