--- a/games.html
+++ b/games.html
@@ -71,7 +71,9 @@ li{
 
 <center><h1 style="font-family:arial;font-size:20px;color:white">Games</h1></center>
 
+<br>
 
+<center><h1 style="font-family:arial;font-size:25px;color:#777777;">Search Page: (Press Ctrl + F)</h1></center>
 
 <br>
 
@@ -90,7 +92,25 @@ li{
 
 <br>
 
-<center><div style="width:60%;max-width:600px;padding:10px;background-color:#444444;border-radius:5px;box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
+<center><div class="i am bread" style="width:60%;max-width:600px;padding:10px;background-color:#444444;border-radius:5px;box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
+    <div class="col-md-4 col-sm-12">
+      <div style="margin:20px;" class="card">
+        <center><div class="card-body">
+          <img src="https://i.ytimg.com/vi/Tlvrd6gt7Vg/maxresdefault.jpg" style="box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);width:100%;border-radius:5px;"></img>
+          <br>
+          <h1 style="font-size:20px;font-family:arial; color:white;">I Am Bread</h1><br>
+        <a style="text-decoration:none;font-size:15px;font-family:arial;color:white;padding:8px;border-radius:4px;box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);"
+         href="http://royalurls.com/294Q">Download</a>
+        </div>
+      </div>
+    </div>
+  </div>
+</center>
+</center>
+
+<br>
+
+<center><div class="rivals of aether" style="width:60%;max-width:600px;padding:10px;background-color:#444444;border-radius:5px;box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
     <div class="col-md-4 col-sm-12">
       <div style="margin:20px;" class="card">
         <center><div class="card-body">
@@ -108,7 +128,7 @@ li{
 
 <br>
 
-<center><div style="width:60%;max-width:600px;padding:10px;background-color:#444444;border-radius:5px;box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
+<center><div class="geometry dash" style="width:60%;max-width:600px;padding:10px;background-color:#444444;border-radius:5px;box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
     <div class="col-md-4 col-sm-12">
       <div style="margin:20px;" class="card">
         <center><div class="card-body">
@@ -126,7 +146,7 @@ li{
 
 <br>
 
-<center><div style="width:60%;max-width:600px;padding:10px;background-color:#444444;border-radius:5px;box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
+<center><div class="this war of mine" style="width:60%;max-width:600px;padding:10px;background-color:#444444;border-radius:5px;box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
     <div class="col-md-4 col-sm-12">
       <div style="margin:20px;" class="card">
         <center><div class="card-body">
@@ -144,7 +164,7 @@ li{
 
 <br>
 
-<center><div style="width:60%;max-width:600px;padding:10px;background-color:#444444;border-radius:5px;box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
+<center><div class="geometry wars" style="width:60%;max-width:600px;padding:10px;background-color:#444444;border-radius:5px;box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
     <div class="col-md-4 col-sm-12">
       <div style="margin:20px;" class="card">
         <center><div class="card-body">
@@ -162,7 +182,7 @@ li{
 
 <br>
 
-<center><div style="width:60%;max-width:600px;padding:10px;background-color:#444444;border-radius:5px;box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
+<center><div class="darkest dungeon" style="width:60%;max-width:600px;padding:10px;background-color:#444444;border-radius:5px;box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
     <div class="col-md-4 col-sm-12">
       <div style="margin:20px;" class="card">
         <center><div class="card-body">
@@ -180,7 +200,7 @@ li{
 
 <br>
 
-<center><div style="width:60%;max-width:600px;padding:10px;background-color:#444444;border-radius:5px;box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
+<center><div class="jurassic world evolution" style="width:60%;max-width:600px;padding:10px;background-color:#444444;border-radius:5px;box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
     <div class="col-md-4 col-sm-12">
       <div style="margin:20px;" class="card">
         <center><div class="card-body">
@@ -198,7 +218,7 @@ li{
 
 <br>
 
-<center><div style="width:60%;max-width:600px;padding:10px;background-color:#444444;border-radius:5px;box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
+<center><div class="passpartout" style="width:60%;max-width:600px;padding:10px;background-color:#444444;border-radius:5px;box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
     <div class="col-md-4 col-sm-12">
       <div style="margin:20px;" class="card">
         <center><div class="card-body">
@@ -216,7 +236,7 @@ li{
 
 <br>
 
-<center><div style="width:60%;max-width:600px;padding:10px;background-color:#444444;border-radius:5px;box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
+<center><div class="agony" style="width:60%;max-width:600px;padding:10px;background-color:#444444;border-radius:5px;box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
     <div class="col-md-4 col-sm-12">
       <div style="margin:20px;" class="card">
         <center><div class="card-body">
@@ -234,7 +254,7 @@ li{
 
 <br>
 
-<center><div style="width:60%;max-width:600px;padding:10px;background-color:#444444;border-radius:5px;box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
+<center><div class="trailmakers" style="width:60%;max-width:600px;padding:10px;background-color:#444444;border-radius:5px;box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
     <div class="col-md-4 col-sm-12">
       <div style="margin:20px;" class="card">
         <center><div class="card-body">
@@ -252,7 +272,7 @@ li{
 
 <br>
 
-<center><div style="width:60%;max-width:600px;padding:10px;background-color:#444444;border-radius:5px;box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
+<center><div class="wizard of legend" style="width:60%;max-width:600px;padding:10px;background-color:#444444;border-radius:5px;box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
     <div class="col-md-4 col-sm-12">
       <div style="margin:20px;" class="card">
         <center><div class="card-body">
@@ -270,7 +290,7 @@ li{
 
 <br>
 
-<center><div style="width:60%;max-width:600px;padding:10px;background-color:#444444;border-radius:5px;box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
+<center><div class="sword art online fatal bullet" style="width:60%;max-width:600px;padding:10px;background-color:#444444;border-radius:5px;box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
     <div class="col-md-4 col-sm-12">
       <div style="margin:20px;" class="card">
         <center><div class="card-body">
@@ -288,7 +308,7 @@ li{
 
 <br>
 
-<center><div style="width:60%;max-width:600px;padding:10px;background-color:#444444;border-radius:5px;box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
+<center><div class="sims 4" style="width:60%;max-width:600px;padding:10px;background-color:#444444;border-radius:5px;box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
     <div class="col-md-4 col-sm-12">
       <div style="margin:20px;" class="card">
         <center><div class="card-body">
@@ -306,7 +326,7 @@ li{
 
 <br>
 
-<center><div style="width:60%;max-width:600px;padding:10px;background-color:#444444;border-radius:5px;box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
+<center><div class="tekken 7" style="width:60%;max-width:600px;padding:10px;background-color:#444444;border-radius:5px;box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
     <div class="col-md-4 col-sm-12">
       <div style="margin:20px;" class="card">
         <center><div class="card-body">
@@ -324,7 +344,7 @@ li{
 
 <br>
 
-<center><div style="width:60%;max-width:600px;padding:10px;background-color:#444444;border-radius:5px;box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
+<center><div class="call of duty black ops 3" style="width:60%;max-width:600px;padding:10px;background-color:#444444;border-radius:5px;box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
     <div class="col-md-4 col-sm-12">
       <div style="margin:20px;" class="card">
         <center><div class="card-body">
@@ -342,7 +362,7 @@ li{
 
 <br>
 
-<center><div style="width:60%;max-width:600px;padding:10px;background-color:#444444;border-radius:5px;box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
+<center><div class="saints row iv" style="width:60%;max-width:600px;padding:10px;background-color:#444444;border-radius:5px;box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
     <div class="col-md-4 col-sm-12">
       <div style="margin:20px;" class="card">
         <center><div class="card-body">
@@ -360,7 +380,7 @@ li{
 
 <br>
 
-<center><div style="width:60%;max-width:600px;padding:10px;background-color:#444444;border-radius:5px;box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
+<center><div class="wwe 2k18" style="width:60%;max-width:600px;padding:10px;background-color:#444444;border-radius:5px;box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
     <div class="col-md-4 col-sm-12">
       <div style="margin:20px;" class="card">
         <center><div class="card-body">
@@ -378,7 +398,7 @@ li{
 
 <br>
 
-<center><div style="width:60%;max-width:600px;padding:10px;background-color:#444444;border-radius:5px;box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
+<center><div class="starbound" style="width:60%;max-width:600px;padding:10px;background-color:#444444;border-radius:5px;box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
     <div class="col-md-4 col-sm-12">
       <div style="margin:20px;" class="card">
         <center><div class="card-body">
@@ -396,7 +416,7 @@ li{
 
 <br>
 
-<center><div style="width:60%;max-width:600px;padding:10px;background-color:#444444;border-radius:5px;box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
+<center><div class="rust" style="width:60%;max-width:600px;padding:10px;background-color:#444444;border-radius:5px;box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
     <div class="col-md-4 col-sm-12">
       <div style="margin:20px;" class="card">
         <center><div class="card-body">
@@ -414,7 +434,7 @@ li{
 
 <br>
 
-<center><div style="width:60%;max-width:600px;padding:10px;background-color:#444444;border-radius:5px;box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
+<center><div class="dead by daylight" style="width:60%;max-width:600px;padding:10px;background-color:#444444;border-radius:5px;box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
     <div class="col-md-4 col-sm-12">
       <div style="margin:20px;" class="card">
         <center><div class="card-body">
@@ -422,7 +442,7 @@ li{
           <br>
           <h1 style="font-size:20px;font-family:arial; color:white;">Dead By Daylight</h1><br>
         <a style="text-decoration:none;font-size:15px;font-family:arial;color:white;padding:8px;border-radius:4px;box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);"
-         href="http://royurls.bid/ThIvQS">Download</a>
+         href="http://royalurls.com/GmlOxJOD">Download</a>
         </div>
       </div>
     </div>
@@ -432,7 +452,7 @@ li{
 
 <br>
 
-<center><div style="width:60%;max-width:600px;padding:10px;background-color:#444444;border-radius:5px;box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
+<center><div class="gmod" style="width:60%;max-width:600px;padding:10px;background-color:#444444;border-radius:5px;box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
     <div class="col-md-4 col-sm-12">
       <div style="margin:20px;" class="card">
         <center><div class="card-body">
@@ -450,7 +470,7 @@ li{
 
 <br>
 
-<center><div style="width:60%;max-width:600px;padding:10px;background-color:#444444;border-radius:5px;box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
+<center><div class="elder scrolls skymin special edition" style="width:60%;max-width:600px;padding:10px;background-color:#444444;border-radius:5px;box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
     <div class="col-md-4 col-sm-12">
       <div style="margin:20px;" class="card">
         <center><div class="card-body">
@@ -468,7 +488,7 @@ li{
 
 <br>
 
-<center><div style="width:60%;max-width:600px;padding:10px;background-color:#444444;border-radius:5px;box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
+<center><div class="far cry 5" style="width:60%;max-width:600px;padding:10px;background-color:#444444;border-radius:5px;box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
     <div class="col-md-4 col-sm-12">
       <div style="margin:20px;" class="card">
         <center><div class="card-body">
@@ -476,7 +496,7 @@ li{
           <br>
           <h1 style="font-size:20px;font-family:arial; color:white;">Far Cry 5</h1><br>
         <a style="text-decoration:none;font-size:15px;font-family:arial;color:white;padding:8px;border-radius:4px;box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);"
-         href="http://royurls.bid/XizwfEJ">Download</a>
+         href="http://royalurls.com/XizwfEJ">Download</a>
         </div>
       </div>
     </div>
@@ -486,7 +506,7 @@ li{
 
 <br>
 
-<center><div style="width:60%;max-width:600px;padding:10px;background-color:#444444;border-radius:5px;box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
+<center><div class="binding of issac rebirth" style="width:60%;max-width:600px;padding:10px;background-color:#444444;border-radius:5px;box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
     <div class="col-md-4 col-sm-12">
       <div style="margin:20px;" class="card">
         <center><div class="card-body">
@@ -504,7 +524,7 @@ li{
 
 <br>
 
-<center><div style="width:60%;max-width:600px;padding:10px;background-color:#444444;border-radius:5px;box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
+<center><div class="bendy and the ink machine chapter 3" style="width:60%;max-width:600px;padding:10px;background-color:#444444;border-radius:5px;box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
     <div class="col-md-4 col-sm-12">
       <div style="margin:20px;" class="card">
         <center><div class="card-body">
