--- a/software.html
+++ b/software.html
@@ -73,6 +73,10 @@ li{
 
 <br>
 
+<center><h1 style="font-family:arial;font-size:25px;color:#777777;">Search Page: (Press Ctrl + F)</h1></center>
+
+<br>
+
 <center>
 <a style="text-decoration:none;" href="http://royurls.bid/OXg4KEXD">
   <div style="width:30%;max-width:500px;padding:4px;margin-bottom:10px;background-color:#444444;border-radius:5px;box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
