--- a/index.html
+++ b/index.html
@@ -80,6 +80,31 @@ li{
 </center>
 
 <br>
+<center>
+<script type="text/javascript">
+sa_client = "6d7818e70f1182e6e377c216fc8722aa";
+sa_code = "6cdca33b6ad58c11af13c77f0335bd6f";
+sa_protocol = ("https:"==document.location.protocol)?"https":"http";
+sa_pline = "0";
+sa_maxads = "1";
+sa_bgcolor = "FFFFFF";
+sa_bordercolor = "BDD631";
+sa_superbordercolor = "BDD631";
+sa_linkcolor = "001EB5";
+sa_desccolor = "000000";
+sa_urlcolor = "788300";
+sa_b = "0";
+sa_format = "column_120x600";
+sa_width = "468";
+sa_height = "90";
+sa_location = "0";
+sa_radius = "0";
+sa_borderwidth = "1";
+sa_font = "0";
+document.write(unescape("%3cscript type='text/javascript' src='"+sa_protocol+"://sa.entireweb.com/sense2.js'%3e%3c/script%3e"));
+</script>
+</center>
+
 <br>
 
 <center><div style="width:60%;max-width:1000px;padding:10px;background-color:#444444;border-radius:5px;box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
