--- a/games.html
+++ b/games.html
@@ -39,13 +39,14 @@ li{
 </head>
 <body>
 
-<h1 style="margin-left:17px;margin-right:17px;font-family:arial;font-size:30px;background-color:#444444;padding:8px;border-radius:5px;color:#f2f2f2;">Haxia<div style="display:table;margin-right:auto;margin-left:auto;">
-<ul style="list-style:none;position:absolute;top:0px;left:80px;">
-<li><a style="text-decoration:none;" href="index.html"><img style="width:30px;border-radius:50%;box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);" src="https://onuniverse-assets.imgix.net/D5756612-BB67-49FD-A236-D77C9C8CFE24.jpg?q=75&dpr=1.25"></img></a></li>
-<li><a style="text-decoration:none;" href="games.html"><img style="width:30px;border-radius:50%;box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);" src="https://pbs.twimg.com/profile_images/1015379157054681088/OIqi7-vA_400x400.jpg"></img></a></li>
-<li><a style="text-decoration:none;" href="software.html"><img style="width:30px;border-radius:50%;box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);" src="https://vignette.wikia.nocookie.net/logopedia/images/0/0a/Sony_Vegas_Pro_14_icon.png/revision/latest?cb=20160925095337"></img></a></li>
-</ul>
-</div></h1>
+  <h1 style="margin-left:17px;margin-right:17px;font-family:arial;font-size:30px;background-color:#444444;padding:8px;border-radius:5px;color:#f2f2f2;">Haxia<div style="display:table;margin-right:auto;margin-left:auto;">
+  <ul style="list-style:none;position:absolute;top:0px;left:80px;">
+  <li><a style="text-decoration:none;" href="index.html"><img style="width:30px;border-radius:50%;box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);" src="https://onuniverse-assets.imgix.net/D5756612-BB67-49FD-A236-D77C9C8CFE24.jpg?q=75&dpr=1.25"></img></a></li>
+  <li><a style="text-decoration:none;" href="games.html"><img style="width:30px;border-radius:50%;box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);" src="https://pbs.twimg.com/profile_images/1015379157054681088/OIqi7-vA_400x400.jpg"></img></a></li>
+  <li><a style="text-decoration:none;" href="software.html"><img style="width:30px;border-radius:50%;box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);" src="https://vignette.wikia.nocookie.net/logopedia/images/0/0a/Sony_Vegas_Pro_14_icon.png/revision/latest?cb=20160925095337"></img></a></li>
+  <li><a style="text-decoration:none;" href="hacks.html"><img style="width:30px;border-radius:50%;box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);" src="https://media-curse.cursecdn.com/attachments/189/0/a5f9fe2b999ccc71afd022aaf70d386b.png"></img></a></li>
+  </ul>
+  </div></h1>
 
 <center><div style="margin-top:300px;width:60%;max-width:1000px;padding:10px;background-color:#444444;border-radius:5px;box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
     <div class="col-md-4 col-sm-12">
