--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="zxx">
 
 <head>
@@ -257,7 +257,7 @@
 									</ul>
 								</div>
 								<div class="wthreeitemdownload">
-									<a href="http://royalurls.com/fzEey">Download</a>
+									<a href="http://royalurls.com/auFAJ">Download</a>
 								</div>
 							</div>
 							<div class="item">
@@ -1500,7 +1500,7 @@
 									</ul>
 								</div>
 								<div class="wthreeitemdownload">
-									<a href="http://royalurls.com/fzEey">Download</a>
+									<a href="http://royalurls.com/auFAJ">Download</a>
 								</div>
 							</div>
 							<div class="item">
