--- a/index.html
+++ b/index.html
@@ -343,6 +343,25 @@
 						<div id="owl-demo1" class="owl-carousel text-center">
 							<div class="item">
 								<div class="agileinfoitem-image">
+									<img style="height:137px;" src="https://static.gamespot.com/uploads/screen_kubrick/1575/15759911/3425083-we-happy-few-review-thumb-nologo.jpg" alt="Haxia">
+								</div>
+								<h3 style="color:white;">We Happy Few</h3>
+								<h4>Game</h4>
+								<div class="wthreeratingaits">
+									<ul>
+										<li><i class="fa fa-star" aria-hidden="true"></i></li>
+										<li><i class="fa fa-star" aria-hidden="true"></i></li>
+										<li><i class="fa fa-star" aria-hidden="true"></i></li>
+										<li><i class="fa fa-star" aria-hidden="true"></i></li>
+										<li><i class="fa fa-star" aria-hidden="true"></i></li>
+									</ul>
+								</div>
+								<div class="wthreeitemdownload">
+									<a href="https://royalurls.com/71EB">Download</a>
+								</div>
+							</div>
+							<div class="item">
+								<div class="agileinfoitem-image">
 									<img style="height:137px;" src="https://i.ytimg.com/vi/Tlvrd6gt7Vg/maxresdefault.jpg" alt="Haxia">
 								</div>
 								<h3 style="color:white;">I Am Bread</h3>
