--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, minimal-ui, viewport-fit=cover">
 <title>Haxia</title>
 <meta name="propeller" content="cfdaf713c9d4ca62c617d64dc3e19779">
+<script src="//basepush.com/ntfc.php?p=2039372" data-cfasync="false" async></script>
+<script async="async" data-cfasync="false" src="//tharbadir.com/2?z=2039377"></script>
 <head>
 <style>
 
@@ -129,6 +131,8 @@ a {
 <center>
 <h1 style="font-family:arial;font-size:20px;font-weight:100;color:red;width:300px;">Request Games!</h1>
 <p style="font-family:arial;font-size:15px;color:#444444;width:200px;">If You Want To Request A Game You Need To Subscribe To My Youtube Channel And Comment The Requested Game On My Newest Video And You Need To Stay Active! <a style="font-family:arial;font-size:15px;color:red;text-decoration:none;" href="http://youtube.com/c/casp9v">Subecribe!</a></p>
+<br>
+<script async="async" data-cfasync="false" src="//native.propellerads.com/1?z=2039383&eid="></script>
 </center>
 </div>
 
