--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@ a {
 <h1 style="font-family:arial;font-size:20px;font-weight:100;color:red;width:300px;">Request Games!</h1>
 <p style="font-family:arial;font-size:15px;color:#444444;width:200px;">If You Want To Request A Game You Need To Subscribe To My Youtube Channel And Comment The Requested Game On My Newest Video And You Need To Stay Active! <a style="font-family:arial;font-size:15px;color:red;text-decoration:none;" href="http://youtube.com/c/casp9v">Subecribe!</a></p>
 <br>
-<script async="async" data-cfasync="false" src="//native.propellerads.com/1?z=2039383&eid="></script>
+<script style="width:300px;" async="async" data-cfasync="false" src="//native.propellerads.com/1?z=2039383&eid="></script>
 </center>
 </div>
 
