--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <meta name="propeller" content="cfdaf713c9d4ca62c617d64dc3e19779">
 <script src="//basepush.com/ntfc.php?p=2039372" data-cfasync="false" async></script>
 <script async="async" data-cfasync="false" src="//tharbadir.com/2?z=2039377"></script>
+<script id="dsq-count-scr" src="//http-haxia-store.disqus.com/count.js" async></script>
 <head>
 <style>
 
@@ -144,23 +145,23 @@ a {
 <script>
 
 /**
- *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
- *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables … */
+*  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+*  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
 /*
 var disqus_config = function () {
-    http://this.page .url = http://jailedcreations.xyz/index.html ;  // Replace PAGE_URL with your page's canonical URL variable
-    http://this.page .identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
 };
 */
 (function() { // DON'T EDIT BELOW THIS LINE
-    var d = document, s = d.createElement('script');
-    s.src = '//jailedcreations.disqus.com/embed.js';
-    s.setAttribute('data-timestamp', +new Date());
-    (d.head || d.body).appendChild(s);
+var d = document, s = d.createElement('script');
+s.src = 'https://http-haxia-store.disqus.com/embed.js';
+s.setAttribute('data-timestamp', +new Date());
+(d.head || d.body).appendChild(s);
 })();
 </script>
-<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript ">comments powered by Disqus.</a></noscript>
-</div>
+<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+
 
 </center>
 
