--- a/index.html
+++ b/index.html
@@ -138,22 +138,32 @@ a {
 <iframe height="80px" width="300px" frameborder="0" src="https://akshatmittal.com/youtube-realtime/embed/#!/UCAkPsL-Nf1NjfLpwlbqyO8g" style="border: 0; width:300px; height:80px; background-color: #FFF;border-radius:10px;box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);border-radius:5px;"></iframe>
 <br>
 <center>
-<h1 style="font-family:arial;font-size:20px;font-weight:100;color:red;width:300px;">Request Games!</h1>
-<p style="font-family:arial;font-size:15px;color:#444444;width:200px;">If You Want To Request A Game You Need To Subscribe To My Youtube Channel And Comment The Requested Game On My Newest Video And You Need To Stay Active! <a style="font-family:arial;font-size:15px;color:red;text-decoration:none;" href="http://youtube.com/c/casp9v">Subecribe!</a></p>
+
+<br>
+<link href="//cdn-images.mailchimp.com/embedcode/slim-10_7.css" rel="stylesheet" type="text/css">
+<style type="text/css">
+	#mc_embed_signup{ clear:left; font:14px Helvetica,Arial,sans-serif; }
+
+</style>
+<div id="mc_embed_signup">
+<form action="https://caspxd.us19.list-manage.com/subscribe/post?u=d0e0d62597ebfab84a7163b24&amp;id=01c193f4f3" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+    <div id="mc_embed_signup_scroll">
+	<label for="mce-EMAIL">Subscribe For Updates!</label>
+	<input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
+
+    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_d0e0d62597ebfab84a7163b24_01c193f4f3" tabindex="-1" value=""></div>
+    <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+    </div>
+</form>
+</div>
+
+<br>
+
+
 </center>
 <div id="disqus_thread"></div>
 <script>
-
-/**
-*  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
-*  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
-/*
-var disqus_config = function () {
-this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
-this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
-};
-*/
-(function() { // DON'T EDIT BELOW THIS LINE
+(function() {
 var d = document, s = d.createElement('script');
 s.src = 'https://http-haxia-store.disqus.com/embed.js';
 s.setAttribute('data-timestamp', +new Date());
