--- a/software.html
+++ b/software.html
@@ -57,6 +57,17 @@ body{
           <div style="margin-top:10px;background-color:#111111;width: 18rem;box-shadow: 0 -2px 10px rgba(0, 0, 0, 1);padding-bottom:10px;" class="card">
             <div class="card-block">
               <img style="width:100%;border-radius:5px;" src="https://www.toolfarm.com/images/uploads/blog/xvegaspro16_blog.jpg.pagespeed.ic.-TD32QmeEr.jpg">
+              <h4 style="margin:10px;color:white;"   class="card-title">Adobe Premier Pro Free Download</h4>
+              <h6 style="margin:10px;color:white;" class="card-subtitle text-muted">Video Editing Software</h6>
+              <a style="margin:10px;" href="https://drive.google.com/file/d/0BzmBSs-P9dEQMmxWYW81YlJoSmM/view?usp=sharing" class="card-link">Windows</a>
+              <a style="margin:10px;" href="https://mega.nz/#F!qWJnTIQZ!wqL-Cek1YVDktLRBA_Mu3w" class="card-link">Mac</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div style="margin-top:10px;background-color:#111111;width: 18rem;box-shadow: 0 -2px 10px rgba(0, 0, 0, 1);padding-bottom:10px;" class="card">
+            <div class="card-block">
+              <img style="width:100%;border-radius:5px;" src="https://www.toolfarm.com/images/uploads/blog/xvegaspro16_blog.jpg.pagespeed.ic.-TD32QmeEr.jpg">
               <h4 style="margin:10px;color:white;"   class="card-title">Sony Vegas Pro 16 Free Download</h4>
               <h6 style="margin:10px;color:white;" class="card-subtitle text-muted">Video Editing Software</h6>
               <a style="margin:10px;" href="https://royalurls.com/KG6dI" class="card-link">Download ZIP</a>
