--- a/software.html
+++ b/software.html
@@ -150,7 +150,7 @@ body{
               <img style="width:100%;border-radius:5px;" src="https://pre00.deviantart.net/7a93/th/pre/f/2015/351/7/7/wallpaper___photoshop_cc_by_graphfutur-d9kflnz.jpg">
               <h4 style="margin:10px;color:white;"   class="card-title">Adobe Photoshop Free Download</h4>
               <h6 style="margin:10px;color:white;" class="card-subtitle text-muted">Photo Editing Software</h6>
-              <a style="margin:10px;" href="http://royurls.bid/Xk21vp" class="card-link">Download ZIP</a>
+              <a style="margin:10px;" href="https://royalurls.com/q32Y" class="card-link">Download ZIP</a>
             </div>
           </div>
         </div>
