--- a/gamepage/vegas16.html
+++ b/gamepage/vegas16.html
@@ -113,9 +113,9 @@ Unlike other editors, MAGIX VEGAS Pro supports scripting technology which provid
                                     <th>Date</th>
                                 </tr>
                                 <tr>
-                                    <td>537.5 MB</td>
-                                    <td>Mega</td>
-                                    <td><a href="https://mega.nz/#!2bJQWIAC!ggUJ87L1TfOwoApF_Q53gDe8aq-g_bt0vJ5qmkmhn9g">download.zip</a></td>
+                                    <td>382.03 MB</td>
+                                    <td>UploadHaven</td>
+                                    <td><a href="https://uploadhaven.com/download/90a426ca70fbb7001292e854b23b0ab7">download.zip</a></td>
                                     <td>1/9/19</td>
                                 </tr>
                                 
